scrollbar new UI added and image animation issue resolved

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,15 +4,13 @@ body {
 
 .scroll::-webkit-scrollbar,
 body::-webkit-scrollbar {
-	width: 10px;
+	width: 7px;
 	background-color: #F5F5F5;
 }
 
 .scroll::-webkit-scrollbar-thumb,
 body::-webkit-scrollbar-thumb {
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-	background-color: #b8b8b8;
+	background-color: #808080;
 }
 
 /* .imgAnimation {
